--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,32 @@
 {
-    "name": "hoyvoy/laravel-cross-database-subqueries",
+    "name": "frozensilence/laravel-cross-database-subqueries",
     "description": "Eloquent cross database compatibility in subqueries",
     "type": "library",
     "require": {
-        "php": ">=7.1.3",
-        "illuminate/support": "^5.6 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/container": "^5.6 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/database": "^5.6 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/events": "^5.6 || ^6.0 || ^7.0 || ^8.0"
+        "php": ">=8.3",
+        "illuminate/support": "^12.0",
+        "illuminate/container": "^12.0",
+        "illuminate/database": "^12.0",
+        "illuminate/events": "^12.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "orchestra/testbench": "3.6.x",
-        "codacy/coverage": "dev-master"
+        "phpunit/phpunit": "^11.0",
+        "orchestra/testbench": "^10.0"
     },
     "autoload": {
         "psr-4": {
-            "Hoyvoy\\CrossDatabase\\": "src/"
+            "FrozenSilence\\CrossDatabase\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Hoyvoy\\Tests\\" : "tests"
+            "FrozenSilence\\Tests\\" : "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Hoyvoy\\CrossDatabase\\CrossDatabaseServiceProvider"
+                "FrozenSilence\\CrossDatabase\\CrossDatabaseServiceProvider"
             ]
         }
     }
